# degoogle-photos

./: .gitignore  README.md  dedup_photos.py  pyproject.toml
degoogle_photos/: __init__.py  archive.py  cli.py  constants.py  copy.py  dedup.py  indexing.py  metadata.py  pipeline.py  report.py  verify.py
tests/: conftest.py  test_archive.py  test_cli.py  test_copy.py  test_dedup.py  test_dedup_mode.py  test_indexing.py  test_metadata.py  test_report.py  test_verify.py
