[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "degoogle-photos"
version = "0.2.1"
description = "Organize Google Takeout photos into YYYY/MM/ folders with dedup and reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{name = "Couzteau"}, {name = "mbeisser1"}]
keywords = ["google-photos", "google-takeout", "photo-organizer", "degoogle", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: System :: Archiving",
]
dependencies = ["Pillow>=9.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/mbeisser1/degoogle-photos"
Repository = "https://github.com/mbeisser1/degoogle-photos"
Issues = "https://github.com/mbeisser1/degoogle-photos/issues"

[tool.setuptools.packages.find]
include = ["degoogle_photos*"]

[project.scripts]
degoogle-photos = "degoogle_photos.cli:main"
